Helm_TodoAppMicro_Services/TodoApplicationUI/Maniests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: todoappcontainer.azurecr.io/ui:latest
        ports:
        - containerPort: 80
