Helm_TodoAppMicro_Services/TodoApplicationUI/Maniests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  labels:
    name: ui
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: todo.dev28.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ui
            port: 
              number: 80
